tests/error/experimental_errors/list_type.py
from guppylang.decorator import guppy


@guppy
def main(x: list[int]) -> list[int]:
    return x


main.compile(entrypoint=False)
