tests/error/experimental_errors/list_type.err
Error: Experimental feature (at $FILE:5:12)
  | 
3 | 
4 | @guppy
5 | def main(x: list[int]) -> list[int]:
  |             ^^^^^^^^^ Lists are an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
